# aquarender

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
aquarender/: __init__.py  cli.py  config.py  deps.py  errors.py  logging_setup.py  params.py  types.py
aquarender/core/: metadata.py  orchestrator.py  preprocessor.py  presets.py
aquarender/db/: models.py  repo.py  session.py
aquarender/db/migrations/: env.py
aquarender/db/migrations/versions/: 001_initial_schema.py
aquarender/engine/: __init__.py  client.py  fakes.py  keepalive.py  tunnel.py  types.py  workflows.py
aquarender/presets/: childrens_book.json  ink_watercolor.json  product_watercolor.json  soft_watercolor.json
aquarender/ui/: app.py  deps.py
aquarender/ui/pages/: batch.py  connect.py  presets.py  single.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  PRD.md  PROMPT.md
notebooks/: README.md  aquarender_kaggle.ipynb  aquarender_oneshot.ipynb
scripts/: oneshot.sh
tests/: conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_fake_client.py  test_metadata.py  test_preprocessor.py  test_preset_service.py  test_security.py  test_tunnel_monitor.py  test_workflow_builder.py
workflows/: img2img_controlnet_lora.json
